--- a/html_advanced/6-index.html
+++ b/html_advanced/6-index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
@@ -10,6 +11,7 @@
     <link rel="icon" type="image/x-icon" href="./favicon.ico">
     <link rel="icon" type="image/png" href="./favicon.png">
 </head>
+
 <body>
     <header>
         Header
@@ -19,16 +21,16 @@
         <section>Services section</section>
         <section>
             Works section
-            <article>Work #1</article>
-            <article>Work #2</article>
-            <article>Work #3</article>
+            <article>Work 1</article>
+            <article>Work 2</article>
+            <article>Work 3</article>
         </section>
         <section>About section</section>
         <section>
             Latest news section
-            <artcile>Article 1</artcile>
-            <artcile>Article 2</artcile>
-            <artcile>Article 3</artcile>
+            <article>Article 1</article>
+            <article>Article 2</article>
+            <article>Article 3</article>
         </section>
         <section>
             Testimonials section
@@ -42,4 +44,5 @@
         Footer
     </footer>
 </body>
+
 </html>
