--- a/html_advanced/6-index.html
+++ b/html_advanced/6-index.html
@@ -21,9 +21,9 @@
         <section>Services section</section>
         <section>
             Works section
-            <article>Work #1</article>
-            <article>Work #2</article>
-            <article>Work #3</article>
+            <article>Work 1</article>
+            <article>Work 2</article>
+            <article>Work 3</article>
         </section>
         <section>About section</section>
         <section>
@@ -35,7 +35,7 @@
         <section>
             Testimonials section
             <article>Testimonial 1</article>
-            <article>Testimomial 2</article>
+            <article>Testimonial 2</article>
             <article>Testimonial 3</article>
         </section>
         <section>Contact section</section>
